[package]
name = "linyu"
version = "0.0.1"
description = "linyu"
authors = ["cershy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }


[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-websocket = "2.0.0-beta.5"
tauri-plugin-http = "2.0.0-beta.7"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-upload = "2.0.0-beta"
lazy_static = "1.4"
screenshots = {git="https://github.com/nashaofu/screenshots-rs", branch="master"}
base64 = {git="https://github.com/marshallpierce/rust-base64", branch="master"}
tauri-plugin-clipboard-manager = "2.1.0-beta.4"

