[package]
name = "linyu"
version = "0.0.1"
description = "linyu"
authors = ["cershy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }


[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-websocket = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-upload = "2.0.0-beta"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-autostart = "2.0.0-beta"
lazy_static = "1.4"
screenshots = "0.5.4"
base64 = {git="https://github.com/marshallpierce/rust-base64", branch="master"}
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
rodio = "0.17.3"

